--- a/main_lesson.css
+++ b/main_lesson.css
@@ -235,7 +235,9 @@ tbody tr:hover {
     width: 35px;
     height: 33px;
 }
-.checkbox{ 
+
+
+/* .checkbox{ 
     width: 40px;
     height: 40px;
 }
@@ -244,3 +246,4 @@ tbody tr:hover {
     width: 40px;
     height: 40px;
 }
+
