--- a/main.css
+++ b/main.css
@@ -260,8 +260,33 @@
     border-radius: 41px;
     margin: 163px 1069px 412px 71px;
     position: absolute;
+    transition-duration: 0s;
+    /* transition-property: background-color; */
 }
 
+
+
+.content_grup1_foto1::after{
+    content:"after";
+    color:#2684F7;
+    height: 60px;
+    width: 0px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    top:-20px;
+    left: 250px;
+    position: absolute;
+    /* transition-duration: 0.7s; */
+  
+}
+.content_grup1_foto1:hover::after {
+    height: 70px;
+    width: 70px;
+    background: #f8f8f8;
+    
+   
+   
+}
 
 
 
